[WK2][Win] Fix ASSERT(DeleteTimerQueueTimer...) https://bugs.webkit.org/show_bug.cgi?id=116039

Reviewed by Benjamin Poulain.

According to the documentation, DeleteTimerQueueTimer can be expected to return
false with an ERROR_IO_PENDING error when called from the timer's callback.

* Platform/win/WorkQueueWin.cpp:
(WorkQueue::timerCallback):

Canonical link: https://commits.webkit.org/134501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150068 268f45cc-cd09-0410-ab3c-d52691b4dbfc